--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -33,7 +33,7 @@
 }
 
 .logo-img {
-  height: 32px;
+  height: 30px;
   width: auto;
 }
 
